# my-kg-codebase

./: .dockerignore  .env.example  .gitignore  HOWTO.md  README.md  TESTING.md  code-kg-mcp-plan.md  code-kg-mcp-zvec-nl-spec.md  codex-cli.txt  convert2txt.sh  init-neo4j-data.sh  pyproject.toml  run-compose.sh
benchmark/: README.md
benchmark/config/: codekg-mcp.json
benchmark/prompts/: README.md  TEMPLATE.txt  manifest.json
benchmark/results/: README.md  scoring.csv
benchmark/schedules/: README.md  example.json
benchmark/scripts/: run-copilot.sh
benchmark/truth/: README.md  schema.json
compose/dev-local/: docker-compose.yml  env
docker/: app.Dockerfile  bulk-import.Dockerfile  bulk-import.sh
evaluation/: README.md  corpora.json
evaluation/truth/: synthetic-phase1.json
src/codekg/: __init__.py  bulk_export.py  bulk_import.py  cli.py  docs.py  evaluation.py  ingest.py  ir.py  loader.py  neo4j_client.py  resolver.py  search_index.py  source_text.py  zvec_store.py
tests/integration/: test_constructor_resolution_neo4j.py  test_descriptive_search_neo4j.py  test_descriptive_structural_flow_neo4j.py  test_evaluation_neo4j_zvec.py  test_loader_neo4j.py  test_mcp_transport_http.py  test_operational_isolation.py  test_structural_queries_neo4j.py
tests/unit/: test_bulk_export.py  test_bulk_import.py  test_cli.py  test_constructor_resolution.py  test_docs.py  test_evaluation.py  test_git_commit.py  test_ingest.py  test_loader.py  test_mcp_server.py  test_queries.py  test_run_compose.py  test_schema_bootstrap.py  test_search_index.py  test_smoke.py  (+2 more)
(+12 files in other folders)
